🐛 fix: harden robustness across 16 files — thread safety, resource mgmt, caching, crash-rate limiting
- Add volatile to PluginRegistry.INSTANCE, FavoriteService.INSTANCE, activePlugin
- Replace PluginLoader LinkedHashMap → ConcurrentHashMap for thread safety
- Synchronize FavoriteService add/remove to prevent duplicate DB inserts
- Add in-memory settings cache + debounced saves in SwissKitJSettingUi
  (eliminates SqlSession-per-keystroke, uses virtual threads)
- Add selectAll to AppSettingMapper for cache preloading
- Fix DatabaseInit to read init.sql with explicit UTF-8 charset
- Replace OnlineStorePane manual JSON parsing with Gson (JsonHelper)
- Add TokenBatcher to AiServiceImpl — coalesces onToken Platform.runLater
  calls to prevent FX thread flooding during high-speed generation
- Add time-windowed crash rate limiting to NativeWorkerClient
  (prevents infinite restart loops via CRASH_WINDOW_MS)
- Add null-check for createView() in MainWindow
- Replace HashMap → ConcurrentHashMap for cachedViews
- Add idempotent guard to WindowResizeHelper.attach
- Limit staggered animations in ContentArea.refresh to first 30 cards
- Add sorted output in ExcelSplitter.complexSplit for deterministic results
- Fix EmailSendService toList reuse — use per-iteration local lists
- Add safety sweep for I18n bindings when list exceeds 500 entries